Comensando la practica de Fibonacci

--- a/Practica_4/index.html
+++ b/Practica_4/index.html
@@ -9,6 +9,10 @@
 <body>
   <h1>Rodrigo Colque</h1>
   <hr>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ratione at sapiente earum ab porro. Earum facere ipsam aliquid aspernatur! Dolorem recusandae ab quis tenetur! Eius fugit nemo ipsum quisquam.</p>
+  <h3>Serie Fibonacci</h3>
+  <label for="">ingrese un numero</label>
+  <input type="number" id="numeroFibonacci">
+  <button id="btnCalcular">Calcular Fibonacci</button>
+  <h4 id="resultado">resultado</h4>
 </body>
 </html>
