--- a/Practica_4/index.html
+++ b/Practica_4/index.html
@@ -13,6 +13,9 @@
   <label for="">ingrese un numero</label>
   <input type="number" id="numeroFibonacci">
   <button id="btnCalcular">Calcular Fibonacci</button>
+  
   <h4 id="resultado">resultado</h4>
+
+  <script src="./script.js"></script>
 </body>
 </html>
