Dando retoques a index.html

--- a/Practica_4/index.html
+++ b/Practica_4/index.html
@@ -10,9 +10,9 @@
   <h1>Rodrigo Colque</h1>
   <hr>
   <h3>Serie Fibonacci</h3>
-  <label for="">ingrese un numero</label>
+  <label for="">Ingrese un numero: </label>
   <input type="number" id="numeroFibonacci">
   <button id="btnCalcular">Calcular Fibonacci</button>
-  <h4 id="resultado">resultado</h4>
+  <h4 id="resultado">Serie Fibonacci: </h4>
 </body>
 </html>
