--- a/Practica_4/index.html
+++ b/Practica_4/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Rodrigo Colque</h1>
+  <h1>Rodrigo C. Garcia</h1>
   <hr>
   <h3>Serie Fibonacci</h3>
   <label for="">Ingrese un numero para calcular su serie: </label>
