Titulo 2, comandos git

--- a/Practica_4/index.html
+++ b/Practica_4/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>Rodrigo C. Garcia</h1>
+  <h2>Comandos Git Platzi</h2>
   <hr>
   <h3>Serie Fibonacci</h3>
   <label for="">Ingrese un numero para calcular su serie: </label>
